--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -4,17 +4,7 @@ on:
   pull_request:
 
 jobs:
-  commitlint:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      - uses: wagoid/commitlint-github-action@v2
-        with:
-          configFile: .commitlintrc.json
-          helpURL: https://docs.pancakeswap.finance/code/contributing#committing
-  eslint:
+  lint:
     runs-on: ubuntu-latest
 
     steps:
