--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pancakeswap-libs/uikit",
-  "version": "0.11.2",
+  "version": "0.10.7",
   "description": "Set of UI components for pancake projects",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -11,7 +11,7 @@
   "repository": "https://github.com/pancakeswap/pancake-uikit",
   "license": "MIT",
   "scripts": {
-    "build": "rm -rf ./dist && rollup -c && tsc -d --emitDeclarationOnly --declarationDir dist && rm -rf ../printer-swap-interface/node_modules/@pancakeswap-libs/uikit/dist && cp -Rp ./dist ../printer-swap-interface/node_modules/@pancakeswap-libs/uikit/dist",
+    "build": "rm -rf ./dist && rollup -c && tsc -d --emitDeclarationOnly --declarationDir dist",
     "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
     "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx}'",
     "storybook": "start-storybook -p 6006",
